SERVER-71383 Add cleanup executor for scoped executor shutdown

(cherry picked from commit 92b2f2d4bf503dfe9a9bf2cc02770f7a66b8c2a1)